apps/kube/kong/manifests/kong-services.yaml
apiVersion: v1
kind: Service
metadata:
    name: kong-kong-proxy
    namespace: kilobase
    labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
        kbve.com/category: networking
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    ports:
        - name: kong-proxy
          port: 80
          targetPort: 8000
          protocol: TCP
        - name: kong-proxy-tls
          port: 443
          targetPort: 8443
          protocol: TCP
    selector:
        app: kong-kong
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
---
apiVersion: v1
kind: Service
metadata:
    name: kong-kong-admin
    namespace: kilobase
    labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
        kbve.com/category: networking
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    ports:
        - name: kong-admin
          port: 8001
          targetPort: 8001
          protocol: TCP
        - name: kong-admin-tls
          port: 8444
          targetPort: 8444
          protocol: TCP
    selector:
        app: kong-kong
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
---
apiVersion: v1
kind: Service
metadata:
    name: kong-kong-manager
    namespace: kilobase
    labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
        kbve.com/category: networking
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    ports:
        - name: kong-manager
          port: 8002
          targetPort: 8002
          protocol: TCP
        - name: kong-manager-tls
          port: 8445
          targetPort: 8445
          protocol: TCP
    selector:
        app: kong-kong
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: kong
        app.kubernetes.io/name: kong
