apps/kube/kong/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: kilobase-api-route
    namespace: kilobase
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - api.kbve.com
        - supabase.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /realtime
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - name: kong-kong-proxy
                port: 80
        - matches:
              - path:
                    type: PathPrefix
                    value: /storage/v1/object/upload
          timeouts:
              backendRequest: 600s
          backendRefs:
              - name: kong-kong-proxy
                port: 80
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: kong-kong-proxy
                port: 80
